[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Guillaume Boddaert <gboddaert@solocal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic-settings = "^2.3.0"
tox = "^4.15.0"
injector = "^0.21.0"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312

[testenv]
allowlist_externals = poetry
commands_pre =
    poetry install --no-root --sync
commands =
    poetry run pytest test/ --import-mode importlib
"""